Updated version to v1.0.9. Supports icon buttons.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "h8k-design",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "A CSS based design library",
   "homepage": "https://h8k-design.now.sh/",
   "repository": "https://github.com/rajatady/H8K-Design",
   "main": "index.js",
   "scripts": {
+    "docs:dev": "vuepress dev docs-v2",
+    "docs:build": "vuepress build docs-v2",
     "test": "echo \"Error: no test specified\" && exit 1",
     "scss": "node-sass lib/index.scss -o dist/",
     "prepublishOnly": "npm --no-git-tag-version version patch && now --prod",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "kss": "^3.0.0",
     "michelangelo": "^0.8.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "vuepress": "^1.4.0"
   }
 }
